
dillo-3.3.0 [Unreleased]

+- Add optional support for brotli (br) content encoding.
 - Add about:keys to display current keyboard shortcuts.
 - Control + left click opens links in new tab (emulates mouse middle button).
 - Ctrl+C copies selected text into the clipboard so Ctrl+V works as expected.
 - Enable IPv6 support by default if supported by the platform.
   Patches: Rodrigo Arias Mallo
+- Middle click on back or forward button opens page in new tab.
   Patches: Alex
+- Add support for Content-Disposition header to set the filename.
   Patches: Cameron Paul, Rodrigo Arias Mallo

dillo-3.2.0 [Jan 18, 2025]

+- Add new_tab_page option to open a custom new tab page.
   Patches: Alex, Rodrigo Arias Mallo
+- Ignore empty page title for tab labels.
 - Fix segfault when clicking the "Done" button in downloads dialog.
 - Add zoom support using Ctrl +/-/0 and the "zoom_factor" option.
 - Fix wrong redirect by meta refresh without URL.
 - Display JSON as plain text.
 - Add line number anchors in HTML source view.
 - Make Dillo strictly C99, C++11 and POSIX-2001 compliant, without depending on
   GNU extensions.
 - Perform an emergency stop of the layout engine loop after 1000 iterations to
   prevent a hang.
 - Fix use-after-free on errors in TLS connection.
 - Add scrollbar_page_mode option to easily scroll full pages with the mouse.
 - Control the page overlap with the scroll_page_overlap option.
 - Set focus_new_tab=NO and show_quit_dialog=NO by default.
 - Fix GET requests over HTTPS via a proxy.
 - Improve image resize logic to always try to preserve the aspect ratio.
 - Reload current page on SIGUSR1 signal
 - Print library versions and enabled features with dillo -v.
 - Allow image formats to be ignored with the "ignore_image_formats" option.
 - Add the "link_action" option to define custom menu entries to open links
   with external programs or scripts.
 - Add support for line fragments in plain text files (file://foo/bar.txt#L42).