@@ -389,6 +389,10 @@ bookmarks page set the following line in <a href="#dillorc">dillorc</a>:
 <pre>
 new_tab_page="dpi:/bm/"
 </pre>
+<p>
+You can quickly focus the N-th tab by pressing <code>Alt</code> and the tab
+number, for example <code>Alt+3</code> will focus the third tab. Using
+<code>Alt+0</code> focuses the tenth tab, as they start counting at 1.
 
 <h3 id="bookmarks">Bookmarks</h3>
 <p>
