@@ -52,7 +52,17 @@ typedef enum {
    KEYS_COPY,
    KEYS_ZOOM_IN,
    KEYS_ZOOM_OUT,
-   KEYS_ZOOM_RESET
+   KEYS_ZOOM_RESET,
+   KEYS_FOCUS_TAB1,
+   KEYS_FOCUS_TAB2,
+   KEYS_FOCUS_TAB3,
+   KEYS_FOCUS_TAB4,
+   KEYS_FOCUS_TAB5,
+   KEYS_FOCUS_TAB6,
+   KEYS_FOCUS_TAB7,
+   KEYS_FOCUS_TAB8,
+   KEYS_FOCUS_TAB9,
+   KEYS_FOCUS_TAB10
 } KeysCommand_t;
 
 class Keys {
